[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_14/Pawn_14_Head.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_14/Pawn_14_Face.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_14/Pawn_14_Tracks_Track.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_14/Pawn_14_Tracks_Back.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_14/Pawn_14_Tracks_Wheels.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_14/Pawn_14_Body.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Pawns/Pawn_14_Parts/Pawn_14_Pic.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Pawns/Pawn_14/Pawn_14_Part_Arm.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_14_Body/Pawn_14_Tracks_Back/Pawn_14_Tracks_Wheels:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_14_Body/Pawn_14_Tracks_Back/Pawn_14_Tracks_Track:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_14_Body/Pawn_14_Head/Pawn_14_Face:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Pawn_14_Pic" type="Node2D"]
script = ExtResource( 7 )

[node name="Pawn_14_Body" type="Sprite" parent="."]
position = Vector2( 0, -25 )
texture = ExtResource( 6 )

[node name="Pawn_14_Tracks_Back" type="Sprite" parent="Pawn_14_Body"]
position = Vector2( 0, 20 )
texture = ExtResource( 4 )

[node name="Pawn_14_Tracks_Wheels" type="Sprite" parent="Pawn_14_Body/Pawn_14_Tracks_Back"]
texture = ExtResource( 5 )
hframes = 6

[node name="Pawn_14_Tracks_Track" type="Sprite" parent="Pawn_14_Body/Pawn_14_Tracks_Back"]
texture = ExtResource( 3 )
hframes = 7

[node name="Pawn_14_Head" type="Sprite" parent="Pawn_14_Body"]
position = Vector2( 0, -23 )
texture = ExtResource( 1 )

[node name="Pawn_14_Face" type="Sprite" parent="Pawn_14_Body/Pawn_14_Head"]
texture = ExtResource( 2 )
hframes = 2

[node name="Pawn_14_Part_Arm" type="Sprite" parent="."]
position = Vector2( 18, -27 )
texture = ExtResource( 8 )
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
